--- a/微信小程序/小程序开发指南.md
+++ b/微信小程序/小程序开发指南.md
@@ -1354,3 +1354,688 @@ Tab 切换对应的生命周期（以 A、B 页面为 Tabbar 页面，C 是从 A
 
 
 ## 组件
+
+一个小程序页面可以分解成多个部分组成，组件就是小程序页面的基本组成单元。为了让开发者可以快速进行开发，小程序的宿主环境提供了一系列基础组件。
+组件是在WXML模板文件声明中使用的，WXML的语法和HTML语法相似，小程序使用标签名来引用一个组件，通常包含开始标签和结束标签，该标签的属性用来描述该组件。
+
+```html
+<!-- page.wxml -->
+<image mode="scaleToFill" src="img.png"></image>
+```
+
+需要注意，所有组件名和属性都是小写，多个单词会以英文横杠 "-" 进行连接。
+
+对于一些容器组件，其内容可以声明在其开始标签和结束标签之间。
+
+ 容器组件嵌套其他组件
+
+```html
+<!-- page.wxml -->
+<view>
+  <image mode="scaleToFill" src="img.png"></image>
+  <view>
+    <view>1</view>
+    <view>2</view>
+    <view>3</view>
+  </view>
+</view>
+```
+
+组件共有属性
+
+| 属性名         | 类型         | 描述           | 其他说明                                 |
+| :------------- | :----------- | :------------- | :--------------------------------------- |
+| id             | String       | 组件的唯一标示 | 保持整个页面唯一                         |
+| class          | String       | 组件的样式类   | 在对应的WXSS中定义的样式类               |
+| style          | String       | 组件的内联样式 | 可以通过数据绑定进行动态设置的内联样式   |
+| hidden         | Boolean      | 组件是否显示   | 所有组件默认显示                         |
+| data-*         | Any          | 自定义属性     | 组件上触发的事件时，会发送给事件处理函数 |
+| bind */ catch* | EventHandler | 事件           | 详情见3.5节                              |
+
+
+
+组件都拥有各自自定义的属性，可以对该组件的功能或者样式进行修饰，以image图片组件为例
+
+Image图片组件属性
+
+| 属性名    | 类型        | 默认值        | 描述                                                         |
+| :-------- | :---------- | :------------ | :----------------------------------------------------------- |
+| src       | String      |               | 图片资源地址                                                 |
+| mode      | String      | 'scaleToFill' | 图片裁剪、缩放的模式                                         |
+| lazy-load | Boolean     | false         | 图片懒加载。只针对page与scroll-view下的image有效 1.5.0       |
+| binderror | HandleEvent |               | 当错误发生时触发事件，事件对象event.detail = {errMsg: 'something wrong'} |
+| bindload  | HandleEvent |               | 当图片载入完毕时触发事件，事件对象event.detail = {height:'图片高度px', width:'图片宽度px'} |
+
+## API
+
+宿主环境提供了丰富的API，可以很方便调起微信提供的能力。在前文的代码示例中可以看到，wx.navigateTo可以保留当前页面，然后跳转到新的页面。这里的wx对象实际上就是小程序的宿主环境所提供的全局对象，几乎所有小程序的API都挂载在wx对象底下（除了Page/App等特殊的构造器），所以本书谈到API概念时，**通常指的是wx对象底下的方法。**
+小程序提供的API按照功能主要分为几大类：网络、媒体、文件、数据缓存、位置、设备、界面、界面节点信息还有一些特殊的开放接口，我们介绍一下API一般调用的约定：
+
+1. wx.on* 开头的 API 是监听某个事件发生的API接口，接受一个 Callback 函数作为参数。当该事件触发时，会调用 Callback 函数。
+2. 如未特殊约定，多数 API 接口为异步接口 ，都接受一个Object作为参数。
+3. API的Object参数一般由success、fail、complete三个回调来接收接口调用结果，示例代码如代码清单3-17所示，详细说明如表3-9所示。
+4. wx.get* 开头的API是获取宿主环境数据的接口。
+5. wx.set* 开头的API是写入数据到宿主环境的接口。
+
+通过wx.request发起网络请求
+
+```javascript
+wx.request({
+    url: 'test.php',
+    data: {},
+    header: { 'content-type': 'application/json' },
+    success: function(res) {
+     // 收到https服务成功后返回
+     console.log(res.data)
+    },
+    fail: function() {
+     // 发生网络错误等情况触发
+    },
+    complete: function() {
+     // 成功或者失败后触发
+    }
+})
+```
+
+API接口回调说明
+
+| 参数名字 | 类型     | 必填 | 描述                                             |
+| :------- | :------- | :--- | :----------------------------------------------- |
+| success  | Function | 否   | 接口调用成功的回调函数                           |
+| fail     | Function | 否   | 接口调用失败的回调函数                           |
+| complete | Function | 否   | 接口调用结束的回调函数（调用成功、失败都会执行） |
+
+还有需要注意到API调用大多都是异步的，其次，有部分API会拉起微信的原生界面，此时会触发Page的onHide方法，当用户从原生界面返回到小程序时，会触发Page的onShow方法。
+
+API的数量非常多，而且随着宿主环境的迭代更新会持续新增API，在这里我们并不想一一展开叙述每一个API的含义，开发者只要了解一般调用API的技巧，再通过官方API文档 https://mp.weixin.qq.com/debug/wxadoc/dev/api/了解到对应的API参数细节即可
+
+## 事件
+
+### 什么是事件
+
+UI界面的程序需要和用户互动，例如用户可能会点击你界面上某个按钮，又或者长按某个区域，这类反馈应该通知给开发者的逻辑层，需要将对应的处理状态呈现给用户。
+
+有些时候程序上的“行为反馈”不一定是用户主动触发的，例如我们在视频video播放的过程中，播放进度是会一直变化的，这种反馈也应该通知给开发者做相应的逻辑处理。
+
+在小程序里边，我们把这种“用户在渲染层的行为反馈”以及“组件的部分状态反馈”抽象为渲染层传递给逻辑层的“事件”
+
+事件处理示例
+
+```html
+<view id="tapTest" data-hi="WeChat" bindtap="tapName"> Click me! </view>
+```
+
+```js
+// page.js
+   Page({
+      tapName: function(event) {
+        console.log(event)
+      }
+})
+```
+
+**事件是通过bindtap这个属性绑定在组件上的**，同时在当前页面的Page构造器中定义对应的事件处理函数tapName，当用户点击该view区域时，达到触发条件生成事件tap，该事件处理函数tapName会被执行，同时还会收到一个事件对象event。
+
+### 事件类型和事件对象
+
+前边说到触发事件是由“用户在渲染层的行为反馈”以及“组件的部分状态反馈”引起的，由于不同组件的状态不一致，所以我们这里不讨论组件相关的事件（组件的事件可以参考其参数说明，详情见官方文档 https://mp.weixin.qq.com/debug/wxadoc/dev/component/ ）
+
+常见的事件类型
+
+| 类型               | 触发条件                                                     |
+| :----------------- | :----------------------------------------------------------- |
+| touchstart         | 手指触摸动作开始                                             |
+| touchmove          | 手指触摸后移动                                               |
+| touchcancel        | 手指触摸动作被打断，如来电提醒，弹窗                         |
+| touchend           | 手指触摸动作结束                                             |
+| tap                | 手指触摸后马上离开                                           |
+| longpress          | 手指触摸后，超过350ms再离开，如果指定了事件回调函数并触发了这个事件，tap事件将不被触发 |
+| longtap            | 手指触摸后，超过350ms再离开（推荐使用longpress事件代替）     |
+| transitionend      | 会在 WXSS transition 或 wx.createAnimation 动画结束后触发    |
+| animationstart     | 会在一个 WXSS animation 动画开始时触发                       |
+| animationiteration | 会在一个 WXSS animation 一次迭代结束时触发                   |
+| animationend       | 会在一个 WXSS animation 动画完成时触发                       |
+
+当事件回调触发的时候，会收到一个事件对象，对象的详细属性如下表所示。
+
+事件对象属性
+
+| 属性           | 类型    | 说明                                         |
+| :------------- | :------ | :------------------------------------------- |
+| type           | String  | 事件类型                                     |
+| timeStamp      | Integer | 页面打开到触发事件所经过的毫秒数             |
+| target         | Object  | 触发事件的组件的一些属性值集合               |
+| currentTarget  | Object  | 当前组件的一些属性值集合                     |
+| detail         | Object  | 额外的信息                                   |
+| touches        | Array   | 触摸事件，当前停留在屏幕中的触摸点信息的数组 |
+| changedTouches | Array   | 触摸事件，当前变化的触摸点信息的数组         |
+
+这里需要注意的是target和currentTarget的区别，currentTarget为当前事件所绑定的组件，而target则是触发该事件的源头组件。
+
+```html
+<!-- page.wxml -->
+<view id="outer" catchtap="handleTap">
+  <view id="inner">点击我</view>
+</view>
+```
+
+```javascript
+// page.js
+Page({
+  handleTap: function(evt) {
+       // 当点击inner节点时
+    // evt.target 是inner view组件
+       // evt.currentTarget 是绑定了handleTap的outer view组件
+       // evt.type == “tap”
+       // evt.timeStamp == 1542
+       // evt.detail == {x: 270, y: 63}
+       // evt.touches == [{identifier: 0, pageX: 270, pageY: 63, clientX: 270, clientY: 63}]
+       // evt.changedTouches == [{identifier: 0, pageX: 270, pageY: 63, clientX: 270, clientY: 63}]
+  }
+})
+```
+
+### 事件绑定与冒泡捕获
+
+事件绑定的写法和组件属性一致，以key="value"的形式，其中：
+
+1. key以bind或者catch开头，然后跟上事件的类型，如bindtap、catchtouchstart。自基础库版本1.5.0起，bind和catch后可以紧跟一个冒号，其含义不变，如bind:tap、catch:touchstart。同时bind和catch前还可以加上capture-来表示捕获阶段。
+2. value是一个字符串，需要在对应的页面Page构造器中定义同名的函数，否则触发事件时在控制台会有报错信息。
+
+bind*和capture-bind*的含义分别代表事件的冒泡阶段和捕获阶段
+
+以下示例中，点击 inner view 会先后调用handleTap2、handleTap4、handleTap3、handleTap1。
+
+```html
+<view
+  id="outer"
+  bind:touchstart="handleTap1"
+  capture-bind:touchstart="handleTap2"
+>
+  outer view
+  <view
+    id="inner"
+    bind:touchstart="handleTap3"
+    capture-bind:touchstart="handleTap4"
+  >
+    inner view
+  </view>
+</view>
+```
+
+bind事件绑定不会阻止冒泡事件向上冒泡，catch事件绑定可以阻止冒泡事件向上冒泡。如果将上面代码中的第一个capture-bind改为capture-catch，将只触发handleTap2(capture-catch将中断捕获阶段和取消冒泡阶段)
+
+```html
+<view
+  id="outer"
+  bind:touchstart="handleTap1"
+  capture-catch:touchstart="handleTap2"
+>
+  outer view
+  <view
+    id="inner"
+    bind:touchstart="handleTap3"
+    capture-bind:touchstart="handleTap4"
+  >
+    inner view
+  </view>
+</view>
+```
+
+注意，除表3-10列举的事件类型之外的其他组件自定义事件，如无特殊声明都是非冒泡事件，如<form/>的submit事件，<input/>的input事件，<scroll-view/>的scroll事件。
+
+## 兼容
+
+小程序的宿主环境一直在迭代更新，提供更多的能力给开发者去完成更多的事情，所以你的小程序会运行在不同版本的宿主环境下。为了让你的小程序在不同环境下都能提供相应的服务，我们需要来了解一下在小程序中如何实现兼容办法。
+
+我们可能需要针对不同手机进行程序上的兼容，此时可以使用 wx.getSystemInfo 或者 wx.getSystemInfoSync 来获取手机品牌、操作系统版本号、微信版本号以及小程序基础库版本号等，通过这个信息，我们可以针对不同平台做差异化的服务。
+
+通过wx.getSystemInfoSync获取宿主环境信息
+
+```js
+wx.getSystemInfoSync()
+/*
+  {
+    brand: "iPhone",      // 手机品牌
+    model: "iPhone 6",    // 手机型号
+    platform: "ios",      // 客户端平台
+    system: "iOS 9.3.4",  // 操作系统版本
+    version: "6.5.23",    // 微信版本号
+    SDKVersion: "1.7.0",  // 小程序基础库版本
+    language: "zh_CN",    // 微信设置的语言
+    pixelRatio: 2,        // 设备像素比
+    screenWidth: 667,    // 屏幕宽度
+    screenHeight: 375,     // 屏幕高度
+    windowWidth: 667,    // 可使用窗口宽度
+    windowHeight: 375,     // 可使用窗口高度
+    fontSizeSetting: 16   // 用户字体大小设置
+  }
+ */
+```
+
+随着宿主环境的更新，新版本的宿主环境会提供一些新的API，你可以通过判断此API是否存在来做程序上的兼容。
+
+通过判断API是否存在做兼容
+
+```javascript
+if (wx.openBluetoothAdapter) {
+  wx.openBluetoothAdapter()
+} else {
+  // 如果希望用户在最新版本的客户端上体验您的小程序，可以这样子提示
+  wx.showModal({
+    title: '提示',
+    content: '当前微信版本过低，无法使用该功能，请升级到最新微信版本后重试。'
+  })
+}
+```
+
+小程序还提供了wx.canIUse这个API，用于判断接口或者组件在当前宿主环境是否可用，其参数格式为: `${API}.${method}.${param}.${options}或者${component}.${attribute}.${option}`
+各个段的含义如下：
+
+- ${API} 代表 API 名字
+- ${method} 代表调用方式，有效值为return, success, object, callback
+- ${param} 代表参数或者返回值
+- ${options} 代表参数的可选值
+- ${component} 代表组件名字
+- ${attribute} 代表组件属性
+- ${option} 代表组件属性的可选值
+
+wx.canIUse调用示例
+
+```javascript
+// 判断接口及其参数在宿主环境是否可用
+wx.canIUse('openBluetoothAdapter')
+wx.canIUse('getSystemInfoSync.return.screenWidth')
+wx.canIUse('getSystemInfo.success.screenWidth')
+wx.canIUse('showToast.object.image')
+wx.canIUse('onCompassChange.callback.direction')
+wx.canIUse('request.object.method.GET')
+
+ // 判断组件及其属性在宿主环境是否可用
+wx.canIUse('contact-button')
+wx.canIUse('text.selectable')
+wx.canIUse('button.open-type.contact')
+```
+
+我们可以选择合适的判断方法来做小程序的向前兼容，以保证我们的小程序在旧版本的微信客户端也能工作正常。在不得已的情况下（小程序强依赖某个新的API或者组件时），还可以通过在小程序管理后台设置“基础库最低版本设置”来达到不向前兼容的目的。例如你选择设置你的小程序只支持1.5.0版本以上的宿主环境，那么当运行着1.4.0版本宿主环境的微信用户打开你的小程序的时候，微信客户端会显示当前小程序不可用，并且提示用户应该去升级微信客户端。
+
+# 场景应用
+
+## 开发流程基本介绍
+
+在启动开发前，首先我们对整个小程序整体的产品体验有一个清晰的规划和定义，一般会通过交互图或者手稿描绘小程序的界面交互和界面之间的跳转关系。
+
+紧接着，我们优先完成WXML+WXSS还原设计稿，把界面涉及到的元素和视觉细节先调试完成。最后我们把按照页面交互梳理出每个页面的data部分，填充WXML的模板语法，还有完成JS逻辑部分。
+
+当然并不是要完全按照这样的开发流程来开发小程序，有些时候我们可能在产品交互体验还不明确的情况下，先完成JS逻辑层一些模块的工作并做好测试。高效的开发流程有很多种方式，一般是根据整个团队的工作节奏来选择和开展，我们这一节讨论到的流程只是其中常见的开发流程。
+
+## 基本的布局方法——Flex布局
+
+如果之前你接触过网页开发中的flexbox布局，基本上你可以略过这节。但有一点需要注意的是，你的小程序要求兼容到iOS8以下版本，需要开启样式自动补全。开启样式自动补全，在“设置”—“项目设置”—勾选“上传代码时样式自动补全”。
+
+在小程序开发中，我们需要考虑各种尺寸终端设备上的适配。在传统网页开发，我们用的是盒模型，通过display:inline | block | inline-block、 position、float来实现布局，缺乏灵活性且有些适配效果难以实现。
+
+这种情况下，我们更建议用flex布局。
+
+在开始介绍flex之前，为了表述方便，我们约定以下术语：采用flex布局的元素，简称为“容器”，在代码示例中以container表示容器的类名。容器内的元素简称为“项目”，在代码示例中以item表示项目的类名。
+
+### 基本概念
+
+flex的概念最早是在2009年被提出，目的是提供一种更灵活的布局模型，使容器能通过改变里面项目的高宽、顺序，来对可用空间实现最佳的填充，方便适配不同大小的内容区域。
+
+在不固定高度信息的例子中，我们只需要在容器中设置以下两个属性即可实现内容不确定下的垂直居中。
+
+```css
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+```
+
+flex不单是一个属性，它包含了一套新的属性集。属性集包括用于设置容器，和用于设置项目两部分。
+
+设置容器的属性有：
+
+```css
+display:flex;
+
+flex-direction:row（默认值） | row-reverse | column |column-reverse
+
+flex-wrap:nowrap（默认值） | wrap | wrap-reverse
+
+justify-content:flex-start（默认值） | flex-end | center |space-between | space-around | space-evenly
+
+align-items:stretch（默认值） | center  | flex-end | baseline | flex-start
+
+align-content:stretch（默认值） | flex-start | center |flex-end | space-between | space-around | space-evenly
+```
+
+设置项目的属性有：
+
+```css
+order:0（默认值） | <integer>
+
+flex-shrink:1（默认值） | <number>
+
+flex-grow:0（默认值） | <number>
+
+flex-basis:auto（默认值） | <length>
+
+flex:none | auto | @flex-grow @flex-shrink @flex-basis
+
+align-self:auto（默认值） | flex-start | flex-end |center | baseline| stretch
+```
+
+在开始介绍各个属性之前，我们需要先明确一个坐标轴。
+
+- 默认的情况下，水平方向的是主轴（main axis），垂直方向的是交叉轴（cross axis）。
+
+- 项目是在主轴上排列，排满后在交叉轴方向换行。需要注意的是，交叉轴垂直于主轴，它的方向取决于主轴方向。
+
+### 容器属性
+
+设置容器，用于统一管理容器内项目布局，也就是管理项目的排列方式和对齐方式。
+
+**flex-direction 属性**
+
+通过设置坐标轴，来**设置项目排列方向**。
+
+```css
+.container{
+  flex-direction: row（默认值） | row-reverse | column | column-reverse
+}
+```
+
+row（默认值）：主轴横向，方向为从左指向右。项目沿主轴排列，从左到右排列。
+
+row-reverse：row的反方向。主轴横向，方向为从右指向左。项目沿主轴排列，从右到左排列。
+
+column：主轴纵向，方向从上指向下。项目沿主轴排列，从上到下排列。
+
+column-reverse：column的反方向。主轴纵向，方向从下指向上。项目沿主轴排列，从下到上排列。
+
+**flex-wrap 属性**
+
+**设置是否允许项目多行排列，以及多行排列时换行的方向**。
+
+```css
+.container{
+  flex-wrap: nowrap（默认值） | wrap | wrap-reverse
+}
+```
+
+nowrap（默认值）：不换行。如果单行内容过多，则溢出容器。
+wrap：容器单行容不下所有项目时，换行排列。
+wrap-reverse：容器单行容不下所有项目时，换行排列。换行方向为wrap时的反方向。
+
+**justify-content 属性**
+
+**设置项目在主轴方向上对齐方式**，以及分配项目之间及其周围多余的空间。
+
+```css
+.container{
+
+  justify-content: flex-start（默认值） | flex-end | center | space-between | space-around| space-evenly
+
+}
+```
+
+flex-start（默认值）：项目对齐主轴起点，项目间不留空隙。
+
+center：项目在主轴上居中排列，项目间不留空隙。主轴上第一个项目离主轴起点距离等于最后一个项目离主轴终点距离。
+
+flex-end：项目对齐主轴终点，项目间不留空隙。
+space-between：项目间间距相等，第一个项目离主轴起点和最后一个项目离主轴终点距离为0。
+space-around：与space-between相似。不同点为，第一个项目离主轴起点和最后一个项目离主轴终点距离为中间项目间间距的一半。
+
+space-evenly：项目间间距、第一个项目离主轴起点和最后一个项目离主轴终点距离等于项目间间距。
+
+**align-items 属性**
+
+**设置项目在行中的对齐方式**。
+
+```css
+.container{
+  align-items:stretch（默认值） | flex-start | center | flex-end | baseline
+}
+```
+
+stretch（默认值）：项目拉伸至填满行高。
+flex-start：项目顶部与行起点对齐。
+center：项目在行中居中对齐。
+flex-end：项目底部与行终点对齐。
+baseline：项目的第一行文字的基线对齐。
+
+**align-content 属性**
+
+**多行排列时，设置行在交叉轴方向上的对齐方式**，以及分配行之间及其周围多余的空间。
+
+```css
+.container{
+
+  align-content: stretch（默认值） | flex-start | center | flex-end | space-between |space-around | space-evenly
+
+}
+```
+
+stretch（默认值）：当未设置项目尺寸，将各行中的项目拉伸至填满交叉轴。当设置了项目尺寸，项目尺寸不变，项目行拉伸至填满交叉轴。
+
+flex-start：首行在交叉轴起点开始排列，行间不留间距。
+
+center：行在交叉轴中点排列，行间不留间距，首行离交叉轴起点和尾行离交叉轴终点距离相等。
+
+flex-end：尾行在交叉轴终点开始排列，行间不留间距。
+space-between：行与行间距相等，首行离交叉轴起点和尾行离交叉轴终点距离为0。
+space-around：行与行间距相等，首行离交叉轴起点和尾行离交叉轴终点距离为行与行间间距的一半。
+
+space-evenly：行间间距、以及首行离交叉轴起点和尾行离交叉轴终点距离相等。
+
+### 项目属性
+
+设置项目，用于设置项目的尺寸、位置，以及对项目的对齐方式做特殊设置。
+
+**order 属性**
+
+**设置项目沿主轴方向上的排列顺序**，数值越小，排列越靠前。属性值为整数。
+
+```css
+.item{
+  order: 0（默认值） | <integer>
+}
+```
+
+**flex-shrink 属性**
+
+**当项目在主轴方向上溢出时，通过设置项目收缩因子来压缩项目适应容器**。属性值为项目的收缩因子，属性值取非负数。
+
+```css
+.item{
+  flex-shrink: 1（默认值） | <number>
+}
+
+.item1{
+  width: 120px;
+  flex-shrink: 2;
+}
+
+.item2{
+  width: 150px;
+  flex-shrink: 3;
+}
+
+.item3{// 项目3未设置flex-shrink，默认flex-shrink值为1
+  width: 180px;
+}
+```
+
+为了加深理解，我们举个例子：
+
+一个宽度为400px的容器，里面的三个项目width分别为120px，150px，180px。分别对这项目1和项目2设置flex-shrink值为2和3。
+
+```css
+.container{
+  display: flex;
+  width: 400px; // 容器宽度为400px
+}
+```
+
+在这个例子中，项目溢出 400 - (120 + 150 + 180) = -50px。计算压缩量时总权重为各个项目的宽度乘以flex-shrink的总和，这个例子压缩总权重为120 * 2 + 150 * 3+ 180 * 1 = 870。各个项目压缩空间大小为总溢出空间乘以项目宽度乘以flex-shrink除以总权重：
+
+item1的最终宽度为：120 - 50 * 120 * 2 / 870 ≈ 106px
+
+item2的最终宽度为：150 - 50 * 150 * 3 / 870 ≈ 124px
+
+item3的最终宽度为：180 - 50 * 180 * 1 / 870 ≈ 169px
+
+其中计算时候值如果为小数，则向下取整。
+
+需要注意一点，**当项目的压缩因子相加小于1时，参与计算的溢出空间不等于完整的溢出空间**。在上面例子的基础上，我们改变各个项目的flex-shrink。
+
+```css
+.container{
+  display: flex;
+  width: 400px; // 容器宽度为400px
+}
+.item1{
+  width: 120px;
+  flex-shrink: 0.1;
+}
+
+.item2{
+  width: 150px;
+  flex-shrink: 0.2;
+}
+
+.item3{
+  width: 180px;
+  flex-shrink: 0.3;
+}
+```
+
+总权重为：120 * 0.1 + 150 * 0.2 + 180 * 0.3 = 96。参与计算的溢出空间不再是50px，而是50 * (0.1 + 0.2 + 0.3) / 1 =30：
+
+item1的最终宽度为：120 - 30 * 120 * 0.1 / 96 ≈ 116px
+
+item2的最终宽度为：150 - 30 * 150 * 0.2 / 96 ≈ 140px
+
+item3的最终宽度为：180 - 30 * 180 * 0.3 / 96 ≈ 163px
+
+**flex-grow 属性**
+
+**当项目在主轴方向上还有剩余空间时，通过设置项目扩张因子进行剩余空间的分配**。属性值为项目的扩张因子，属性值取非负数。
+
+```css
+.item{
+  flex-grow: 0（默认值） | <number>
+}
+```
+
+为了加深理解，我们举个例子：
+
+一个宽度为400px的容器，里面的三个项目width分别为80px，120px，140px。分别对这项目1和项目2设置flex-grow值为3和1。
+
+```css
+.container{
+  display: flex;
+  width: 400px; // 容器宽度为400px
+}
+.item1{
+  width: 80px;
+  flex-grow: 3;
+}
+
+.item2{
+  width: 120px;
+  flex-grow: 1;
+}
+
+.item3{// 项目3未设置flex-grow，默认flex-grow值为0
+  width: 140px;
+}
+```
+
+在这个例子中，容器的剩余空间为 400 - (80 + 120 + 140) = 60px。剩余空间按 60 / (3 + 1 + 0) = 15px进行分配：
+
+item1的最终宽度为：80+ (15 * 3) = 125px
+
+item2的最终宽度为：120 + (15 * 1) = 135px
+
+item3的最终宽度为：140 + (15 * 0) =140px
+
+**需要注意一点，当项目的扩张因子相加小于1时，剩余空间按除以1进行分配。**在上面例子的基础上，我们改变各个项目的flex-grow。
+
+```css
+.container{
+  display: flex;
+  width: 400px; // 容器宽度为400px
+}
+
+.item1{
+  width: 50px;
+  flex-grow: 0.1;
+}
+
+.item2{
+  width: 80px;
+  flex-grow: 0.3;
+}
+
+.item3{
+  width: 110px;
+  flex-grow: 0.2;
+}
+```
+
+在这个例子中，容器的剩余空间为 400 - (50 + 80 + 110) = 160px。由于项目的flex-grow相加0.1 + 0.3 + 0.2 = 0.6小于1，剩余空间按 160 / 1 = 160px划分。例子中的项目宽度分别为：
+
+item1的最终宽度为：50 + (160 * 0.1) = 66px
+
+item2的最终宽度为：80 + (160 * 0.3) = 128px
+
+item3的最终宽度为：110 + (160 * 0.2) = 142px
+
+**flex-basis 属性**
+
+当容器设置flex-direction为row或row-reverse时，flex-basis和width同时存在，flex-basis优先级高于width，也就是此时flex-basis代替项目的width属性。
+
+当容器设置flex-direction为column或column-reverse时，flex-basis和height同时存在，flex-basis优先级高于height，也就是此时flex-basis代替项目的height属性。
+
+需要注意的是，当flex-basis和width（或height），**其中一个属性值为auto时，非auto的优先级更高**。
+
+```css
+.item{
+  flex-basis: auto（默认值） | <number>px
+}
+```
+
+**flex 属性**
+
+是flex-grow，flex-shrink，flex-basis的简写方式。值设置为none，等价于00 auto。值设置为auto，等价于1 1 auto。
+
+```css
+.item{
+
+  flex: none | auto | @flex-grow @flex-shrink@flex-basis
+
+}
+```
+
+
+
+**align-self 属性**
+
+设置项目在行中交叉轴方向上的对齐方式，用于覆盖容器的align-items，这么做可以对项目的对齐方式做特殊处理。默认属性值为auto，继承容器的align-items值，当容器没有设置align-items时，属性值为stretch。
+
+```css
+.item{
+
+  align-self: auto（默认值） | flex-start | center | flex-end | baseline |stretch
+
+}
+```
+
+
+
+## 界面常见的交互反馈
+
