--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7317,6 +7317,69 @@ let result=nearestPalindromic(n);
 console.log(result);
 ```
 
+## 589. N 叉树的前序遍历
+
+给定一个 n 叉树的根节点  root ，返回 其节点值的 前序遍历 。
+
+n 叉树 在输入中按层序遍历进行序列化表示，每组子节点由空值 null 分隔（请参见示例）。
+
+进阶：递归法很简单，你可以使用迭代法完成此题吗?
+
+递归
+
+```js
+/**
+ * // Definition for a Node.
+ * function Node(val, children) {
+ *    this.val = val;
+ *    this.children = children;
+ * };
+ */
+
+/**
+ * @param {Node|null} root
+ * @return {number[]}
+ */
+var preorder = function(root) {
+   if (root===null) {
+      return [];
+   }
+    let ans=[];
+    ans.push(root.val);
+    if (root.children!==null) {
+      let arr=root.children;
+      for(let i=0;i<arr.length;i++){
+         ans=ans.concat(preorder(arr[i]));
+      }
+    }
+    return ans;
+};
+
+```
+
+迭代
+
+```js
+var preorder = function(root) {
+   if (root===null) {
+      return [];
+   }
+   let arr=[root]
+    let ans=[];
+    while(arr.length>0){
+      let node=arr.pop();
+      ans.push(node.val);
+      if(node.children!==null){
+         let temp=node.children;
+         for(let i=temp.length-1;i>=0;i--){
+            arr.push(temp[i]);
+         }
+      }
+    }
+    return ans;
+};
+```
+
 
 
 ## 686. 重复叠加字符串匹配
