--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9742,6 +9742,74 @@ let result=construct2DArray(str1,2,2);
 console.log(result);
 ```
 
+2049. 统计最高分的节点数目
+给你一棵根节点为 0 的 二叉树 ，它总共有 n 个节点，节点编号为 0 到 n - 1 。同时给你一个下标从 0 开始的整数数组 parents 表示这棵树，其中 parents[i] 是节点 i 的父节点。由于节点 0 是根，所以 parents[0] == -1 。
+
+**一个子树的 大小 为这个子树内节点的数目**。每个节点都有一个与之关联的 分数 。求出某个节点分数的方法是，将这个节点和与它相连的边全部 删除 ，剩余部分是若干个 非空 子树，这个节点的 分数 为所有这些子树 大小的乘积 。
+
+请你返回有 最高得分 节点的 数目 。
+
+提示：
+
+n == parents.length
+2 <= n <= 105
+parents[0] == -1
+对于 i != 0 ，有 0 <= parents[i] <= n - 1
+parents 表示一棵二叉树。
+
+在一棵树中，当把一个节点和与它相连的所有边删除，剩余部分最多为三棵非空子树，即原节点的左子树（如果有），右子树（如果有），以及把以这个节点为根结点的子树移除所形成的子树（除根结点外均有）。而这个节点的分数为这些子树的节点个数的乘积。我们可以先用parents 数组统计出每个节点的子节点，然后使用深度优先搜索来计算以每个节点为根结点的子树的大小，同时计算每个节点的大小，作为深度优先搜索的返回值，最后统计最大分数出现的次数。在实现上，统计最大分数出现的次数可以放到深度优先搜索中完成，从而节省一部分空间。
+
+```js
+/**
+ * @param {number[]} parents
+ * @return {number}
+ */
+var countHighestScoreNodes = function(parents) {
+   //记录每一个结点的父节点、左右子树结点数
+   let n=parents.length;
+   const children=new Array(n);
+   let maxScore=0;
+   let cnt=0;
+   for (let i=0;i<n;i++){
+      children[i]=[];
+   }
+   for (let i=0;i<n;i++){
+      let p=parents[i];
+      if (p!==-1) {
+         children[p].push(i);
+      }
+   }
+   //使用深度优先搜索来计算以每个节点为根结点的子树的大小
+   const dfs=(node)=>{
+      let score=1;
+      let size=n-1; //size为与父结点向上相连的结点数目
+      for (let c of children[node]){
+         let t=dfs(c);
+         score *=t;
+         size-=t;
+      }
+      if (node!==0){
+         score*=size;
+      }
+      if (score===maxScore) {
+         cnt++;
+      }else if(score>maxScore){
+         maxScore=score;
+         cnt=1;
+      }
+      return n-size;
+   }
+   dfs(0);
+   return cnt;
+};
+
+let parents = [-1,2,0,2,0]
+let result=countHighestScoreNodes(parents);
+console.log(result);
+```
+
+
+
 ## 2055. 蜡烛之间的盘子
 
 给你一个长桌子，桌子上盘子和蜡烛排成一列。给你一个下标从 0 开始的字符串 s ，它只包含字符 '*' 和 '|' ，其中 '*' 表示一个 盘子 ，'|' 表示一支 蜡烛 。
