--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6385,6 +6385,72 @@ console.log(result);
 
 ```
 
+## 393. UTF-8 编码验证
+
+给定一个表示数据的整数数组 data ，返回它是否为有效的 UTF-8 编码。
+
+UTF-8 中的一个字符可能的长度为 1 到 4 字节，遵循以下的规则：
+
+对于 1 字节 的字符，字节的第一位设为 0 ，后面 7 位为这个符号的 unicode 码。
+对于 n 字节 的字符 (n > 1)，第一个字节的前 n 位都设为1，第 n+1 位设为 0 ，后面字节的前两位一律设为 10 。剩下的没有提及的二进制位，全部为这个符号的 unicode 码。
+
+注意：输入是整数数组。只有每个整数的 最低 8 个有效位 用来存储数据。这意味着每个整数只表示 1 字节的数据。
+
+```js
+/**
+ * @param {number[]} data
+ * @return {boolean}
+ */
+var validUtf8 = function(data) {
+   let n=data.length;
+   let m=0;  //1~4
+   let flag=true;
+   for(let i=0;i<n;i++){
+      let binary=("00000000"+data[i].toString(2)).slice(-8);
+      //console.log(binary);
+      if (flag) {
+         //每个字符的第一个字节
+         for(let j=0;j<8;j++){
+            if (binary[j]==="0") {
+               break;
+            }else{
+               m++;
+            }
+         }
+         if(m===1 || m>4){
+            //开始字节不能一个1开头,不能超过4
+            return false;
+         }else if (m!==0) {
+            flag=false;
+            m--;  //再遍历m-1个
+         }else{
+            //为0时代表一个字节的字符
+         }
+      }else{
+         //判断后续m-1个
+         if (binary.indexOf("10")!==0) {
+            return false;
+         }
+         m--;
+         if (m==0) {
+            flag=true;
+         }
+      }
+   }
+   if(m>0){
+      //判断最后是否满足
+      return false;
+   }
+   return true;
+};
+
+let data = [197,130,1];
+let result=validUtf8(data);
+console.log(result);
+```
+
+
+
 ## 401. 二进制手表
 
 二进制手表顶部有 4 个 LED 代表 小时（0-11），底部的 6 个 LED 代表 分钟（0-59）。每个 LED 代表一个 0 或 1，最低位在右侧。
