--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9996,6 +9996,73 @@ let result=countHighestScoreNodes(parents);
 console.log(result);
 ```
 
+## 2044统计按位或能得到最大值的子集数目
+
+给你一个整数数组 nums ，请你找出 nums 子集 按位或 可能得到的 最大值 ，并返回按位或能得到最大值的 不同非空子集的数目 。
+
+如果数组 a 可以由数组 b 删除一些元素（或不删除）得到，则认为数组 a 是数组 b 的一个 子集 。如果选中的元素下标位置不一样，则认为两个子集 不同 。
+
+对数组 a 执行 按位或 ，结果等于 a[0] OR a[1] OR ... OR a[a.length - 1]（下标从 0 开始）。
+
+提示：
+
+1 <= nums.length <= 16
+1 <= nums[i] <= 105
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var countMaxOrSubsets = function(nums) {
+   let maxOr=0,cnt=0;
+   for (let i=0;i<1<<nums.length;i++){
+      let orVal=0;
+      for(let j=0;j<nums.length;j++){
+         if (((i>>j)&1)===1) {
+            orVal|=nums[j];
+         }
+      }
+      if (orVal>maxOr) {
+         maxOr=orVal;
+         cnt=1;
+      }else if(orVal===maxOr){
+         cnt++;
+      }
+   }
+   return cnt;
+};
+
+let nums = [3,2,1,5];
+let result=countMaxOrSubsets(nums);
+console.log(result);
+```
+
+```js
+var countMaxOrSubsets = function(nums) {
+    this.nums = nums;
+    this.maxOr = 0;
+    this.cnt = 0;
+    dfs(0, 0);
+    return cnt;
+};
+
+const dfs = (pos, orVal) => {
+    if (pos === nums.length) {
+        if (orVal > maxOr) {
+            maxOr = orVal;
+            cnt = 1;
+        } else if (orVal === maxOr) {
+            cnt++;
+        }
+        return;
+    }
+    dfs(pos + 1, orVal | nums[pos]);
+    dfs(pos + 1, orVal);
+}
+
+```
+
 
 
 ## 2055. 蜡烛之间的盘子
