--- a/面试题目/错题笔记.md
+++ b/面试题目/错题笔记.md
@@ -77,7 +77,13 @@ jQuery极大的丰富了DOM操作
 
 call/apply用来改变函数的执行上下文（this），它们的第一个参数thisArg是个对象，即作为函数内的this。有两种情况需要注意，**传null或undefined时，将是JS执行环境的全局变量**。浏览器中是window，其它环境（如node）则是global。
 
+## +运算符
 
++运算符作为二元运算符时，有两个功能 数字相加连接字符串 数字相加没啥好说的，连接字符串时，会先把两个参数都转换成字符串再进行连接。 
+
++作为一元运算符时，会将参数转换为数字返回 
+
+-运算符，输出一个转换后的负数
 
 # HTML部分
 
@@ -91,9 +97,15 @@ for（ 规定 label 绑定到哪个表单元素。 ）
 
 form（规定 label 字段所属的一个或多个表单）
 
+## SVG与Canvas的区别
 
+```
+ SVG 是一种使用 XML 描述 2D 图形的语言。 SVG 基于 XML，这意味着 SVG DOM 中的每个元素都是可用的。您可以为某个元素附加 JavaScript 事件处理器。 在 SVG 中，每个被绘制的图形均被视为对象。如果 SVG 对象的属性发生变化，那么浏览器能够自动重现图形。 
+ 
+Canvas 通过 JavaScript 来绘制 2D 图形。 Canvas 是逐像素进行渲染的。 在 canvas 中，一旦图形被绘制完成，它就不会继续得到浏览器的关注。如果其位置发生变化，那么整个场景也需要重新绘制，包括任何或许已被图形覆盖的对象。 
 
-
+Canvas 与 SVG 的比较 下表列出了 canvas 与 SVG 之间的一些不同之处。 Canvas 依赖分辨率 不支持事件处理器 弱的文本渲染能力 能够以 .png 或 .jpg 格式保存结果图像 最适合图像密集型的游戏，其中的许多对象会被频繁重绘 SVG 不依赖分辨率 支持事件处理器 最适合带有大型渲染区域的应用程序（比如谷歌地图） 复杂度高会减慢渲染速度（任何过度使用 DOM 的应用都不快） 不适合游戏应用
+```
 
 
 
