--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10241,6 +10241,93 @@ let result=countHighestScoreNodes(parents);
 console.log(result);
 ```
 
+## 2043. 简易银行系统
+
+你的任务是为一个很受欢迎的银行设计一款程序，以自动化执行所有传入的交易（转账，存款和取款）。银行共有 n 个账户，编号从 1 到 n 。每个账号的初始余额存储在一个下标从 0 开始的整数数组 balance 中，其中第 (i + 1) 个账户的初始余额是 balance[i] 。
+
+请你执行所有 有效的 交易。如果满足下面全部条件，则交易 有效 ：
+
+指定的账户数量在 1 和 n 之间，且
+取款或者转账需要的钱的总数 小于或者等于 账户余额。
+实现 Bank 类：
+
+Bank(long[] balance) 使用下标从 0 开始的整数数组 balance 初始化该对象。
+boolean transfer(int account1, int account2, long money) 从编号为 account1 的账户向编号为 account2 的账户转帐 money 美元。如果交易成功，返回 true ，否则，返回 false 。
+boolean deposit(int account, long money) 向编号为 account 的账户存款 money 美元。如果交易成功，返回 true ；否则，返回 false 。
+boolean withdraw(int account, long money) 从编号为 account 的账户取款 money 美元。如果交易成功，返回 true ；否则，返回 false 。
+
+```js
+/**
+ * @param {number[]} balance
+ */
+var Bank = function(balance) {
+    this.balance=balance;
+    this.number=this.balance.length;
+};
+
+/** 
+ * @param {number} account1 
+ * @param {number} account2 
+ * @param {number} money
+ * @return {boolean}
+ */
+Bank.prototype.transfer = function(account1, account2, money) {
+    if (account1<=this.number && account2<=this.number) {
+        if (this.balance[account1-1]>=money) {
+            this.balance[account1-1]-=money;
+            this.balance[account2-1]+=money;
+            return true;
+        }else{
+            return false;
+        }
+    }else{
+        return false;
+    }
+};
+
+/** 
+ * @param {number} account 
+ * @param {number} money
+ * @return {boolean}
+ */
+Bank.prototype.deposit = function(account, money) {
+    if (account<=this.number){
+        this.balance[account-1]+=money;
+        return true;
+    }else{
+        return false;
+    }
+};
+
+/** 
+ * @param {number} account 
+ * @param {number} money
+ * @return {boolean}
+ */
+Bank.prototype.withdraw = function(account, money) {
+    if (account<=this.number){
+        if (this.balance[account-1]>=money) {
+            this.balance[account-1]-=money;
+            return true;
+        }else{
+            return false;
+        }
+    }else{
+        return false;
+    }
+};
+
+/**
+ * Your Bank object will be instantiated and called as such:
+ * var obj = new Bank(balance)
+ * var param_1 = obj.transfer(account1,account2,money)
+ * var param_2 = obj.deposit(account,money)
+ * var param_3 = obj.withdraw(account,money)
+ */
+```
+
+
+
 ## 2044统计按位或能得到最大值的子集数目
 
 给你一个整数数组 nums ，请你找出 nums 子集 按位或 可能得到的 最大值 ，并返回按位或能得到最大值的 不同非空子集的数目 。
