--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7710,6 +7710,49 @@ let result=findRestaurant(list1, list2);
 console.log(result);
 ```
 
+## 606. 根据二叉树创建字符串
+
+你需要采用前序遍历的方式，将一个二叉树转换成一个由括号和整数组成的字符串。
+
+空节点则用一对空括号 "()" 表示。而且你需要省略所有不影响字符串与原始二叉树之间的一对一映射关系的空括号对。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {string}
+ */
+var tree2str = function(root) {
+    if (root===null) {
+        return ""
+    }
+    let ans=[];
+    ans.push(root.val);
+    if (root.left!==null) {
+        ans.push("(");
+        ans=ans.concat(tree2str(root.left));
+        ans.push(")")
+    }
+    if (root.right!==null) {
+        if (root.left===null) {
+            ans.push("()")
+        }
+        ans.push("(");
+        ans=ans.concat(tree2str(root.right));
+        ans.push(")");
+    }
+    return ans.join("");
+
+};
+```
+
 
 
 ## 686. 重复叠加字符串匹配
