--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7753,6 +7753,55 @@ var tree2str = function(root) {
 };
 ```
 
+## 653. 两数之和 IV - 输入 BST
+
+给定一个二叉搜索树 root 和一个目标结果 k，如果 BST 中存在两个元素且它们的和等于给定的目标结果，则返回 true。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {number} k
+ * @return {boolean}
+ */
+var findTarget = function(root, k) {
+    let s=new Set();
+    s.add(k-root.val);
+    let arr=[root];
+    while(arr.length>0){
+        let node=arr.shift()
+        if (node.left!==null) {
+            if (s.has(node.left.val)) {
+                return true;
+            }else{
+                s.add(k-node.left.val);
+                arr.push(node.left);
+            }
+        }
+        if (node.right!==null) {
+            if (s.has(node.right.val)) {
+                return true;
+            }else{
+                s.add(k-node.right.val);
+                arr.push(node.right);
+            }
+        }
+    }
+    return false;
+};
+```
+
+```
+
+```
+
 
 
 ## 686. 重复叠加字符串匹配
@@ -10218,71 +10267,70 @@ let result=construct2DArray(str1,2,2);
 console.log(result);
 ```
 
-2049. 统计最高分的节点数目
-给你一棵根节点为 0 的 二叉树 ，它总共有 n 个节点，节点编号为 0 到 n - 1 。同时给你一个下标从 0 开始的整数数组 parents 表示这棵树，其中 parents[i] 是节点 i 的父节点。由于节点 0 是根，所以 parents[0] == -1 。
+## 2039. 网络空闲的时刻
 
-**一个子树的 大小 为这个子树内节点的数目**。每个节点都有一个与之关联的 分数 。求出某个节点分数的方法是，将这个节点和与它相连的边全部 删除 ，剩余部分是若干个 非空 子树，这个节点的 分数 为所有这些子树 大小的乘积 。
+给你一个有 n 个服务器的计算机网络，服务器编号为 0 到 n - 1 。同时给你一个二维整数数组 edges ，其中 edges[i] = [ui, vi] 表示服务器 ui 和 vi 之间有一条信息线路，在 一秒 内它们之间可以传输 任意 数目的信息。再给你一个长度为 n 且下标从 0 开始的整数数组 patience 。
 
-请你返回有 最高得分 节点的 数目 。
+题目保证所有服务器都是 相通 的，也就是说一个信息从任意服务器出发，都可以通过这些信息线路直接或间接地到达任何其他服务器。
 
-提示：
+编号为 0 的服务器是 主 服务器，其他服务器为 数据 服务器。每个数据服务器都要向主服务器发送信息，并等待回复。信息在服务器之间按 最优 线路传输，也就是说每个信息都会以 最少时间 到达主服务器。主服务器会处理 所有 新到达的信息并 立即 按照每条信息来时的路线 反方向 发送回复信息。
 
-n == parents.length
-2 <= n <= 105
-parents[0] == -1
-对于 i != 0 ，有 0 <= parents[i] <= n - 1
-parents 表示一棵二叉树。
+在 0 秒的开始，所有数据服务器都会发送各自需要处理的信息。从第 1 秒开始，每 一秒最 开始 时，每个数据服务器都会检查它是否收到了主服务器的回复信息（包括新发出信息的回复信息）：
 
-在一棵树中，当把一个节点和与它相连的所有边删除，剩余部分最多为三棵非空子树，即原节点的左子树（如果有），右子树（如果有），以及把以这个节点为根结点的子树移除所形成的子树（除根结点外均有）。而这个节点的分数为这些子树的节点个数的乘积。我们可以先用parents 数组统计出每个节点的子节点，然后使用深度优先搜索来计算以每个节点为根结点的子树的大小，同时计算每个节点的大小，作为深度优先搜索的返回值，最后统计最大分数出现的次数。在实现上，统计最大分数出现的次数可以放到深度优先搜索中完成，从而节省一部分空间。
+如果还没收到任何回复信息，那么该服务器会周期性 重发 信息。数据服务器 i 每 patience[i] 秒都会重发一条信息，也就是说，数据服务器 i 在上一次发送信息给主服务器后的 patience[i] 秒 后 会重发一条信息给主服务器。
+否则，该数据服务器 不会重发 信息。
+当没有任何信息在线路上传输或者到达某服务器时，该计算机网络变为 空闲 状态。
 
-```js
+请返回计算机网络变为 空闲 状态的 最早秒数 。
+
+```
 /**
- * @param {number[]} parents
+ * @param {number[][]} edges
+ * @param {number[]} patience
  * @return {number}
  */
-var countHighestScoreNodes = function(parents) {
-   //记录每一个结点的父节点、左右子树结点数
-   let n=parents.length;
-   const children=new Array(n);
-   let maxScore=0;
-   let cnt=0;
-   for (let i=0;i<n;i++){
-      children[i]=[];
-   }
-   for (let i=0;i<n;i++){
-      let p=parents[i];
-      if (p!==-1) {
-         children[p].push(i);
-      }
-   }
-   //使用深度优先搜索来计算以每个节点为根结点的子树的大小
-   const dfs=(node)=>{
-      let score=1;
-      let size=n-1; //size为与父结点向上相连的结点数目
-      for (let c of children[node]){
-         let t=dfs(c);
-         score *=t;
-         size-=t;
-      }
-      if (node!==0){
-         score*=size;
-      }
-      if (score===maxScore) {
-         cnt++;
-      }else if(score>maxScore){
-         maxScore=score;
-         cnt=1;
-      }
-      return n-size;
-   }
-   dfs(0);
-   return cnt;
+var networkBecomesIdle = function(edges, patience) {
+    const n = patience.length, graph = new Map()
+    for(const edge of edges) {
+        var l1, l2
+        if(graph.has(edge[0]))
+            l1 = graph.get(edge[0])
+        else
+            l1 = new Array()
+        l1.push(edge[1])
+        graph.set(edge[0], l1)
+        if(graph.has(edge[1]))
+            l2 = graph.get(edge[1])
+        else
+            l2 = new Array()
+        l2.push(edge[0])
+        graph.set(edge[1], l2)
+    }
+    const distance = new Array(n).fill(Number.MAX_SAFE_INTEGER)
+    distance[0] = 0
+    let queue = [0], cost = 0
+    while(queue.length > 0) {
+        cost += 1
+        next = new Array()
+        for(const server of queue)
+            for(const other of graph.get(server))
+                if(distance[other] == Number.MAX_SAFE_INTEGER) {
+                    distance[other] = cost
+                    next.push(other)
+                }
+        queue = next
+    }
+    let ans = 0
+    for(let i = 1; i < n; i++) {
+        const d = distance[i] * 2, p = patience[i]
+        ans = Math.max(ans, Math.floor((d - 1) / p) * p + d)
+    }
+    return ans + 1
 };
 
-let parents = [-1,2,0,2,0]
-let result=countHighestScoreNodes(parents);
-console.log(result);
 ```
+
+
 
 ## 2043. 简易银行系统
 
@@ -10438,7 +10486,74 @@ const dfs = (pos, orVal) => {
 
 ```
 
+## 2049. 统计最高分的节点数目
 
+给你一棵根节点为 0 的 二叉树 ，它总共有 n 个节点，节点编号为 0 到 n - 1 。同时给你一个下标从 0 开始的整数数组 parents 表示这棵树，其中 parents[i] 是节点 i 的父节点。由于节点 0 是根，所以 parents[0] == -1 。
+
+**一个子树的 大小 为这个子树内节点的数目**。每个节点都有一个与之关联的 分数 。求出某个节点分数的方法是，将这个节点和与它相连的边全部 删除 ，剩余部分是若干个 非空 子树，这个节点的 分数 为所有这些子树 大小的乘积 。
+
+请你返回有 最高得分 节点的 数目 。
+
+提示：
+
+n == parents.length
+2 <= n <= 105
+parents[0] == -1
+对于 i != 0 ，有 0 <= parents[i] <= n - 1
+parents 表示一棵二叉树。
+
+在一棵树中，当把一个节点和与它相连的所有边删除，剩余部分最多为三棵非空子树，即原节点的左子树（如果有），右子树（如果有），以及把以这个节点为根结点的子树移除所形成的子树（除根结点外均有）。而这个节点的分数为这些子树的节点个数的乘积。我们可以先用parents 数组统计出每个节点的子节点，然后使用深度优先搜索来计算以每个节点为根结点的子树的大小，同时计算每个节点的大小，作为深度优先搜索的返回值，最后统计最大分数出现的次数。在实现上，统计最大分数出现的次数可以放到深度优先搜索中完成，从而节省一部分空间。
+
+```js
+/**
+ * @param {number[]} parents
+ * @return {number}
+ */
+var countHighestScoreNodes = function(parents) {
+   //记录每一个结点的父节点、左右子树结点数
+   let n=parents.length;
+   const children=new Array(n);
+   let maxScore=0;
+   let cnt=0;
+   for (let i=0;i<n;i++){
+      children[i]=[];
+   }
+   for (let i=0;i<n;i++){
+      let p=parents[i];
+      if (p!==-1) {
+         children[p].push(i);
+      }
+   }
+   //使用深度优先搜索来计算以每个节点为根结点的子树的大小
+   const dfs=(node)=>{
+      let score=1;
+      let size=n-1; //size为与父结点向上相连的结点数目
+      for (let c of children[node]){
+         let t=dfs(c);
+         score *=t;
+         size-=t;
+      }
+      if (node!==0){
+         score*=size;
+      }
+      if (score===maxScore) {
+         cnt++;
+      }else if(score>maxScore){
+         maxScore=score;
+         cnt=1;
+      }
+      return n-size;
+   }
+   dfs(0);
+   return cnt;
+};
+
+let parents = [-1,2,0,2,0]
+let result=countHighestScoreNodes(parents);
+console.log(result);
+```
+
+## 
 
 ## 2055. 蜡烛之间的盘子
 
