--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3710,6 +3710,49 @@ let result=titleToNumber(test);
 console.log(result);
 ```
 
+## 172. 阶乘后的零
+
+给定一个整数 n ，返回 n! 结果中尾随零的数量。
+
+提示 n! = n * (n - 1) * (n - 2) * ... * 3 * 2 * 1
+提示：
+
+0 <= n <= 104
+
+进阶：你可以设计并实现对数时间复杂度的算法来解决此问题吗？
+
+![阶乘后的零](E:\pogject\学习笔记\image\leetcode\阶乘后的零.png)
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var trailingZeroes = function(n) {
+    let ans = 0;
+    for (let i = 5; i <= n; i += 5) {
+        for (let x = i; x % 5 == 0; x /= 5) {
+            ++ans;
+        }
+    }
+    return ans;
+};
+```
+
+```js
+var trailingZeroes = function(n) {
+    let ans = 0;
+    while (n !== 0) {
+        n = Math.floor(n / 5);
+        ans += n;
+    }
+    return ans;
+};
+
+```
+
+
+
 ## 175. 组合两个表
 
 编写一个 SQL 查询，满足条件：无论 person 是否有地址信息，都需要基于上述两表提供 person 的以下信息：
@@ -7753,6 +7796,8 @@ var tree2str = function(root) {
 };
 ```
 
+
+
 ## 653. 两数之和 IV - 输入 BST
 
 给定一个二叉搜索树 root 和一个目标结果 k，如果 BST 中存在两个元素且它们的和等于给定的目标结果，则返回 true。
@@ -7800,6 +7845,52 @@ var findTarget = function(root, k) {
 
 ```
 
+```
+
+## 661. 图片平滑器
+
+图像平滑器 是大小为 3 x 3 的过滤器，用于对图像的每个单元格平滑处理，平滑处理后单元格的值为该单元格的平均灰度。
+
+每个单元格的  平均灰度 定义为：该单元格自身及  其周围的 8 个单元格的平均值，结果需向下取整。（即，需要计算蓝色平滑器中 9 个单元格的平均值）。
+
+如果一个单元格周围存在单元格缺失的情况，则计算平均灰度时不考虑缺失的单元格（即，需要计算红色平滑器中 4 个单元格的平均值）。
+
+给你一个表示图像灰度的 m x n 整数矩阵 img ，返回对图像的每个单元格平滑处理后的图像 。
+
+```js
+/**
+ * @param {number[][]} img
+ * @return {number[][]}
+ */
+var imageSmoother = function(img) {
+    let m=img.length;
+    let n=img[0].length;
+    const dirs=[[-1,0],[-1,1],[0,1],[1,1],[1,0],[1,-1],[0,-1],[-1,-1]];
+    let ans=new Array(m);
+    for(let i=0;i<m;i++){
+        ans[i]=new Array(n).fill(0);
+    }
+    for(let i=0;i<m;i++){
+        for(let j=0;j<n;j++){
+            let sum=img[i][j];
+            let count=1;
+            dirs.forEach((dir)=>{
+                let row=i+dir[0];
+                let col=j+dir[1];
+                if(row>=0 && row<m && col>=0 && col<n ){
+                    count+=1;
+                    sum+=img[row][col];
+                }
+            });
+            ans[i][j]=Math.floor(sum/count);
+        }
+    }
+    return ans;
+};
+
+let test=[[100,200,100],[200,50,200],[100,200,100]];
+let result=imageSmoother(test);
+console.log(result);
 ```
 
 
