--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7893,6 +7893,56 @@ let result=imageSmoother(test);
 console.log(result);
 ```
 
+## 682. 棒球比赛
+
+你现在是一场采用特殊赛制棒球比赛的记录员。这场比赛由若干回合组成，过去几回合的得分可能会影响以后几回合的得分。
+
+比赛开始时，记录是空白的。你会得到一个记录操作的字符串列表 ops，其中 ops[i] 是你需要记录的第 i 项操作，ops 遵循下述规则：
+
+整数 x - 表示本回合新获得分数 x
+"+" - 表示本回合新获得的得分是前两次得分的总和。题目数据保证记录此操作时前面总是存在两个有效的分数。
+"D" - 表示本回合新获得的得分是前一次得分的两倍。题目数据保证记录此操作时前面总是存在一个有效的分数。
+"C" - 表示前一次得分无效，将其从记录中移除。题目数据保证记录此操作时前面总是存在一个有效的分数。
+请你返回记录中所有得分的总和。
+
+提示：
+
+1 <= ops.length <= 1000
+ops[i] 为 "C"、"D"、"+"，或者一个表示整数的字符串。整数范围是 [-3 * 104, 3 * 104]
+对于 "+" 操作，题目数据保证记录此操作时前面总是存在两个有效的分数
+对于 "C" 和 "D" 操作，题目数据保证记录此操作时前面总是存在一个有效的分数
+
+```js
+/**
+ * @param {string[]} ops
+ * @return {number}
+ */
+var calPoints = function(ops) {
+	let sum=Number(ops[0]);
+	let arr=[Number(ops[0])];
+	for(let i=1;i<ops.length;i++){
+		if (ops[i]==="+") {
+			sum+=arr[arr.length-2]+arr[arr.length-1];
+			arr.push(arr[arr.length-2]+arr[arr.length-1]);
+		}else if(ops[i]==="D"){
+			sum+=2*arr[arr.length-1];
+			arr.push(2*arr[arr.length-1]);
+		}else if (ops[i]==="C") {
+			sum-=arr[arr.length-1]
+			arr.pop();
+		}else{
+			arr.push(Number(ops[i]));
+			sum+=Number(ops[i]);
+		}
+	}
+	return sum;
+};
+
+let test=["5","-2","4","C","D","9","+","+"];
+let result=calPoints(test);
+console.log(result);
+```
+
 
 
 ## 686. 重复叠加字符串匹配
