--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10408,6 +10408,57 @@ let result=construct2DArray(str1,2,2);
 console.log(result);
 ```
 
+## 2028. 找出缺失的观测数据
+
+现有一份 n + m 次投掷单个 六面 骰子的观测数据，骰子的每个面从 1 到 6 编号。观测数据中缺失了 n 份，你手上只拿到剩余 m 次投掷的数据。幸好你有之前计算过的这 n + m 次投掷数据的 平均值 。
+
+给你一个长度为 m 的整数数组 rolls ，其中 rolls[i] 是第 i 次观测的值。同时给你两个整数 mean 和 n 。
+
+返回一个长度为 n 的数组，包含所有缺失的观测数据，且满足这 n + m 次投掷的 平均值 是 mean 。如果存在多组符合要求的答案，只需要返回其中任意一组即可。如果不存在答案，返回一个空数组。
+
+k 个数字的 平均值 为这些数字求和后再除以 k 。
+
+注意 mean 是一个整数，所以 n + m 次投掷的总和需要被 n + m 整除。
+
+提示：
+
+m == rolls.length
+1 <= n, m <= 105
+1 <= rolls[i], mean <= 6
+
+```js
+/**
+ * @param {number[]} rolls
+ * @param {number} mean
+ * @param {number} n
+ * @return {number[]}
+ */
+var missingRolls = function(rolls, mean, n) {
+	let m=rolls.length;
+	let sum=mean*(m+n);
+	let sumM=0;
+	for (let i=0;i<m;i++){
+		sumM+=rolls[i];
+	}
+	let sumN=sum-sumM;
+	if (sumN>6*n || sumN<n) {
+		//n位的和最大位6*n,最小为n
+		return [];
+	}
+
+	let meanN=Math.floor(sumN/n);
+	sumN-=meanN*n;
+	
+	return new Array(n-sumN).fill(meanN).concat(new Array(sumN).fill(meanN+1));
+};
+
+let rolls = [3,2,4,3], mean = 4, n = 2;
+let result=missingRolls(rolls,mean,n);
+console.log(result);
+```
+
+
+
 ## 2039. 网络空闲的时刻
 
 给你一个有 n 个服务器的计算机网络，服务器编号为 0 到 n - 1 。同时给你一个二维整数数组 edges ，其中 edges[i] = [ui, vi] 表示服务器 ui 和 vi 之间有一条信息线路，在 一秒 内它们之间可以传输 任意 数目的信息。再给你一个长度为 n 且下标从 0 开始的整数数组 patience 。
