--- a/牛客刷题题目/错题笔记.md
+++ b/牛客刷题题目/错题笔记.md
@@ -85,6 +85,81 @@ call/apply用来改变函数的执行上下文（this），它们的第一个参
 
 -运算符，输出一个转换后的负数
 
+## Number转化为0
+
+```js
+console.log(Number());
+console.log(Number(0));
+console.log(Number(''));
+console.log(Number('0'));
+console.log(Number(false));
+console.log(Number(null));
+console.log(Number([]));
+console.log(Number([0]));
+```
+
+## window.setTimeout
+
+ [`WindowOrWorkerGlobalScope`](https://developer.mozilla.org/zh-CN/docs/Web/API/WindowOrWorkerGlobalScope) 混合的 **`setTimeout()`**方法设置一个定时器，该定时器在定时器到期后执行一个函数或指定的一段代码。
+
+### [语法](https://developer.mozilla.org/zh-CN/docs/Web/API/setTimeout#syntax)
+
+```
+var timeoutID = scope.setTimeout(function[, delay, arg1, arg2, ...]);
+var timeoutID = scope.setTimeout(function[, delay]);
+var timeoutID = scope.setTimeout(code[, delay]);
+```
+
+### [参数](https://developer.mozilla.org/zh-CN/docs/Web/API/setTimeout#参数)
+
+- `function`
+
+  [`function`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Function) 是你想要在到期时间(`delay`毫秒)之后执行的[函数](https://developer.mozilla.org/en-US/docs/JavaScript/Reference/Global_Objects/Function)。
+
+- `code`
+
+  这是一个可选语法，你可以使用字符串而不是[`function`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Function) ，在`delay`毫秒之后编译和执行字符串 (使用该语法是**不推荐的,** 原因和使用 [`eval()`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/eval)一样，有安全风险)。
+
+- `delay` 可选
+
+  延迟的毫秒数 (一秒等于1000毫秒)，函数的调用会在该延迟之后发生。如果省略该参数，delay取默认值0，意味着“马上”执行，或者尽快执行。不管是哪种情况，实际的延迟时间可能会比期待的(delay毫秒数) 值长，原因请查看[实际延时比设定值更久的原因：最小延迟时间](https://developer.mozilla.org/zh-CN/docs/Web/API/setTimeout#实际延时比设定值更久的原因：最小延迟时间)。
+
+- `arg1, ..., argN` 可选
+
+  附加参数，一旦定时器到期，它们会作为参数传递给[`function`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Function) 
+
+### [返回值](https://developer.mozilla.org/zh-CN/docs/Web/API/setTimeout#examples)
+
+返回值`timeoutID`是一个正整数，表示定时器的编号。这个值可以传递给[`clearTimeout()`](https://developer.mozilla.org/zh-CN/docs/Web/API/clearTimeout)来取消该定时器。
+
+需要注意的是`setTimeout()`和[`setInterval()`](https://developer.mozilla.org/zh-CN/docs/Web/API/setInterval)共用一个编号池，技术上，`clearTimeout()`和 [`clearInterval()`](https://developer.mozilla.org/zh-CN/docs/Web/API/clearInterval) 可以互换。但是，为了避免混淆，不要混用取消定时函数。
+
+在同一个对象上（一个window或者worker），`setTimeout()`或者`setInterval()`在后续的调用不会重用同一个定时器编号。但是不同的对象使用独立的编号池。
+
+### [关于"`this`"的问题](https://developer.mozilla.org/zh-CN/docs/Web/API/setTimeout#关于this的问题)
+
+当你向 `setTimeout()` (或者其他函数)传递一个函数时,该函数中的`this`指向跟你的期望可能不同，这个问题在 [JavaScript reference](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/this#method_binding) 中进行了详细解释.
+
+#### [解释](https://developer.mozilla.org/zh-CN/docs/Web/API/setTimeout#解释)
+
+由`setTimeout()`调用的代码运行在与所在函数完全分离的执行环境上。这会导致，这些代码中包含的 `this` 关键字在非严格模式会指向 `window` (或全局)对象，严格模式下为 undefined，这和所期望的`this`的值是不一样的。
+
+备注：**即使是在严格模式下，`setTimeout()`的回调函数里面的`this`仍然默认指向`window`对象**， 并不是`undefined`。
+
+```js
+function checkState(){
+ alert("liyuming"); 
+ }
+window.setTimeout(checkState(), 10000); //立即被调用 
+//checkState加了圆括弧相当于函数表达式，会立即执行，执行的结果作为返回值传递给settimeout。
+
+window.setTimeout(checkState, 10000); // 10s后被调用 
+
+window.setTimeout("checkState()", 10000); //10s后被调用 注意和第一个的区别 有引号
+```
+
+
+
 # HTML部分
 
 ## label标签
