--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8066,6 +8066,37 @@ console.log(result);
 
 ```
 
+## 693. 交替位二进制数
+
+给定一个正整数，检查它的二进制表示是否总是 0、1 交替出现：换句话说，就是二进制表示中相邻两位的数字永不相同。
+
+```js
+/**
+ * @param {number} n
+ * @return {boolean}
+ */
+var hasAlternatingBits = function(n) {
+	n=n.toString(2);
+	for(let i=0;i<n.length;i++){
+		if (n[i]==n[i-1]) {
+			return false;
+		}
+	}
+	return true;
+};
+
+let n=7;
+let result=hasAlternatingBits(n);
+console.log(result);
+```
+
+```js
+var hasAlternatingBits = function(n) {
+    const a = n ^ (n >> 1);
+    return (a & (a + 1)) === 0;
+};
+```
+
 
 
 ## 717.  比特与2比特字符
