--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10439,6 +10439,55 @@ let result=construct2DArray(str1,2,2);
 console.log(result);
 ```
 
+## 2024. 考试的最大困扰度
+
+一位老师正在出一场由 n 道判断题构成的考试，每道题的答案为 true （用 'T' 表示）或者 false （用 'F' 表示）。老师想增加学生对自己做出答案的不确定性，方法是 最大化 有 连续相同 结果的题数。（也就是连续出现 true 或者连续出现 false）。
+
+给你一个字符串 answerKey ，其中 answerKey[i] 是第 i 个问题的正确结果。除此以外，还给你一个整数 k ，表示你能进行以下操作的最多次数：
+
+每次操作中，将问题的正确答案改为 'T' 或者 'F' （也就是将 answerKey[i] 改为 'T' 或者 'F' ）。
+请你返回在不超过 k 次操作的情况下，最大 连续 'T' 或者 'F' 的数目。
+
+提示：
+
+n == answerKey.length
+1 <= n <= 5 * 104
+answerKey[i] 要么是 'T' ，要么是 'F'
+1 <= k <= n
+
+在指定字符的情况下，我们可以计算其最大连续数目。具体地，我们使用滑动窗口的方法，从左到右枚举右端点，维护区间中另一种字符的数量为 sum，当 sum 超过 k，我们需要让左端点右移，直到 sum≤k。移动过程中，我们记录滑动窗口的最大长度，即为指定字符的最大连续数目。
+
+本题的答案为分别指定字符为 TT 和 FF 时的最大连续数目的较大值。
+
+```js
+/**
+ * @param {string} answerKey
+ * @param {number} k
+ * @return {number}
+ */
+var maxConsecutiveAnswers = function(answerKey, k) {
+	return Math.max(maxConsecutiveChar(answerKey,k,"T"),maxConsecutiveChar(answerKey,k,"F"));
+};
+var maxConsecutiveChar=function(answerKey,k,ch){
+	let n=answerKey.length;
+	let ans=0;
+	for (let left=0,right=0,sum=0;right<n;right++){
+		sum+=answerKey.charAt(right)!==ch ? 1 : 0;
+		while(sum>k){
+			sum-=answerKey[left++]!==ch ? 1 : 0;
+		}
+		ans=Math.max(ans,right-left+1);
+	}
+	return ans;
+}
+
+let answerKey = "TTFF", k = 2;
+let result=maxConsecutiveAnswers(answerKey,k);
+console.log(result);
+```
+
+
+
 ## 2028. 找出缺失的观测数据
 
 现有一份 n + m 次投掷单个 六面 骰子的观测数据，骰子的每个面从 1 到 6 编号。观测数据中缺失了 n 份，你手上只拿到剩余 m 次投掷的数据。幸好你有之前计算过的这 n + m 次投掷数据的 平均值 。
