--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9697,6 +9697,99 @@ let result=maximumRequests(n,requests);
 console.log(result);
 ```
 
+## 1606. 找到处理最多请求的服务器
+
+你有 k 个服务器，编号为 0 到 k-1 ，它们可以同时处理多个请求组。每个服务器有无穷的计算能力但是 不能同时处理超过一个请求 。请求分配到服务器的规则如下：
+
+第 i （序号从 0 开始）个请求到达。
+如果所有服务器都已被占据，那么该请求被舍弃（完全不处理）。
+如果第 (i % k) 个服务器空闲，那么对应服务器会处理该请求。
+否则，将请求安排给下一个空闲的服务器（服务器构成一个环，必要的话可能从第 0 个服务器开始继续找下一个空闲的服务器）。比方说，如果第 i 个服务器在忙，那么会查看第 (i+1) 个服务器，第 (i+2) 个服务器等等。
+给你一个 严格递增 的正整数数组 arrival ，表示第 i 个任务的到达时间，和另一个数组 load ，其中 load[i] 表示第 i 个请求的工作量（也就是服务器完成它所需要的时间）。你的任务是找到 最繁忙的服务器 。最繁忙定义为一个服务器处理的请求数是所有服务器里最多的。
+
+请你返回包含所有 最繁忙服务器 序号的列表，你可以以任意顺序返回这个列表。
+
+提示：
+
+1 <= k <= 105
+1 <= arrival.length, load.length <= 105
+arrival.length == load.length
+1 <= arrival[i], load[i] <= 109
+arrival 保证 严格递增 。
+
+超时
+
+```js
+/**
+ * @param {number} k
+ * @param {number[]} arrival
+ * @param {number[]} load
+ * @return {number[]}
+ */
+var busiestServers = function(k, arrival, load) {
+	let n=arrival.length;
+	let serveNum=new Array(k).fill(0);  //执行的任务数
+	let taskTime=new Array(k).fill(0);  //还需要多久执行完正在执行的任务
+	serveNum[0]=1;
+	taskTime[0]=load[0];
+	let k1=0;
+	for (let i=1;i<n;i++){
+		for(let k2=0;k2<k;k2++){
+			taskTime[k2]-=(arrival[i]-arrival[i-1]);
+		}
+		k1=i%k;
+		if (taskTime[k1]<=0) {
+			taskTime[k1]=load[i];
+			serveNum[k1]++;
+		}else{
+			let flag=true;
+			for (let j=k1+1;j<k;j++){
+				if (taskTime[j]<=0) {
+					taskTime[j]=load[i];
+					serveNum[j]++;
+					flag=false;
+					break;
+				}
+			}
+			if (flag) {
+				//需要遍历完所有服务器
+				for (let j=0;j<k1;j++){
+					if (taskTime[j]<=0) {
+						taskTime[j]=load[i];
+						serveNum[j]++;
+						break;
+					}
+				}
+			}
+		}
+		//console.log(taskTime);
+	}
+	let ans=[0];
+	for (let i=1;i<k;i++){
+		if (serveNum[i]>serveNum[ans[0]]) {
+			ans=[i];
+		}else if(serveNum[i]===serveNum[ans[0]]){
+			ans.push(i);
+		}
+	}
+	return ans;
+};
+let k = 7, arrival = [1,3,4,5,6,11,12,13,15,19,20,21,23,25,31,32], load = [9,16,14,1,5,15,6,10,1,1,7,5,11,4,4,6] ;
+let result=busiestServers(k, arrival, load);
+console.log(result);
+
+```
+
+官方解答
+
+![找到处理最多请求的服务器](E:\pogject\学习笔记\image\leetcode\找到处理最多请求的服务器.png)
+
+```
+
+```
+
+
+
 
 
 ## 1614.括号的最大嵌套深度
